--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,14 @@ _*
 docs/*
 !docs/*.html
 
-!results/barcode_counts
+**/.ipynb_checkpoints/
+**/.ipynb_checkpoints/**
+**/.DS_Store
+**/._*
+**/.*
+
+results/logs
+
 results/barcode_counts/*
 !results/barcode_counts/*.csv
 
@@ -17,8 +24,7 @@ results/plates/*/*
 !results/plates/*/qc_drops.yml
 
 !results/miscellaneous_plates
-results/miscellaneous_plates/*/*
-!results/miscellaneous/*/*.csv
+!results/miscellaneous/*/*
 
 !results/sera
 results/sera/*/*
